--- a/templates/mkdocs/extra.css
+++ b/templates/mkdocs/extra.css
@@ -1,1 +1,18 @@
 /* templates/mkdocs/extra.css */
+
+.rendered_html .alert {
+    margin-bottom: initial;
+}
+
+.alert-info {
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 18px;
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
